--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "ttl-cache-js": "^1.1.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
