--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.0.0-rc.13",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "store": "^2.0.12",
     "ttl-cache-js": "^1.1.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
