wip: add localforage instead of store.js

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "store": "^2.0.12",
     "ttl-cache-js": "^1.1.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
